Refactor code for hash tables implementation.

--- a/hash_tabes.ipynb
+++ b/hash_tabes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,9 +33,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['march', '9,320,march']]\n"
+     ]
+    }
+   ],
    "source": [
     "#what is the need\n",
     "#using list\n",
@@ -55,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,9 +75,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'march': '9,320,march'}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#using dictionary\n",
     "stock_prices = {}\n",
@@ -98,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,9 +148,9 @@
     "        h = get_hash(key)\n",
     "        self.arr[h] = None\n",
     "t = HashTables()\n",
-    "t.add(\"march 6\",140)\n",
-    "t.get('march 6')\n",
-    "del t['march 6']\n",
+    "t.__setitem__(\"march 6\",140)\n",
+    "t.__getitem__('march 6')\n",
+    "#del t['march 6']\n",
     "#this does not handel collsion\n",
     "#t['march 6'] = 130 is more convineient to write than to call get add function\n",
     "# to override this python provides __setitem__() and __getitem__() whihch overrides this sytnax\n",
@@ -139,11 +165,201 @@
     " \n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#handling collisions\n",
+    "#using seperate chaining method\n",
+    "class HashTables:\n",
+    "    def __init__(self):\n",
+    "        self.MAX = 100\n",
+    "        self.arr = [[] for i in range(self.MAX)]\n",
+    "        \n",
+    "    def get_hash(self,key):\n",
+    "        h = 0\n",
+    "        for char in key:\n",
+    "            h += ord(char)\n",
+    "        return h % self.MAX\n",
+    "    def __setitem__(self,key,val):\n",
+    "        h = self.get_hash(key)\n",
+    "        #hanlding collision\n",
+    "        found = False\n",
+    "        for idx,element in enumerate(self.arr[h]):\n",
+    "            if len(element) == 2 and element[0] == key:\n",
+    "                self.arr[h][idx] = (key,val)\n",
+    "                found  = True\n",
+    "                break\n",
+    "        if not found:       \n",
+    "            self.arr[h].append((key,val))\n",
+    "    def __getitem__(self,key):\n",
+    "        h = self.get_hash(key)\n",
+    "        return self.arr[h]\n",
+    "    def __deleteitem__(self,key):\n",
+    "        h = get_hash(key)\n",
+    "        self.arr[h] = None\n",
+    "t = HashTables()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t[\"march 6\"] = 128\n",
+    "t['march 6'] = 78\n",
+    "t['march 9'] = 4\n",
+    "t['march 17'] = 459\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [('march 6', 78)],\n",
+       " [],\n",
+       " [],\n",
+       " [('march 9', 4)],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [('march 17', 459)],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " []]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t.arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
