Update the hash table implementation to use a chaining method instead of open addressing.

--- a/hash_tabes.ipynb
+++ b/hash_tabes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
        "9"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
     "#using seperate chaining method\n",
     "class HashTables:\n",
     "    def __init__(self):\n",
-    "        self.MAX = 100\n",
+    "        self.MAX = 10\n",
     "        self.arr = [[] for i in range(self.MAX)]\n",
     "        \n",
     "    def get_hash(self,key):\n",
@@ -197,16 +197,21 @@
     "            self.arr[h].append((key,val))\n",
     "    def __getitem__(self,key):\n",
     "        h = self.get_hash(key)\n",
-    "        return self.arr[h]\n",
-    "    def __deleteitem__(self,key):\n",
-    "        h = get_hash(key)\n",
-    "        self.arr[h] = None\n",
+    "        for element in self.arr[h]:\n",
+    "            if element[0] == key:\n",
+    "                return element[1]\n",
+    "    def __delitem__(self,key):\n",
+    "        h = self.get_hash(key)\n",
+    "        for index,element in enumerate(self.arr[h]):\n",
+    "            if element[0] == key:\n",
+    "                del self.arr[h][index]\n",
+    "                \n",
     "t = HashTables()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,115 +223,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [('march 6', 78)],\n",
-       " [],\n",
-       " [],\n",
-       " [('march 9', 4)],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [('march 17', 459)],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " []]"
+       "459"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t.__getitem__(\"march 17\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[],\n",
+      " [],\n",
+      " [('march 9', 4)],\n",
+      " [],\n",
+      " [],\n",
+      " [],\n",
+      " [],\n",
+      " [],\n",
+      " [],\n",
+      " [('march 6', 78), ('march 17', 459)]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pprint import pprint\n",
+    "pprint(t.arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del t['march 6']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[], [], [('march 9', 4)], [], [], [], [], [], [], [('march 17', 459)]]"
+      ]
+     },
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
