The commit diff adds a new code block that sorts two lists of characters and prints them.

--- a/hash_tabes.ipynb
+++ b/hash_tabes.ipynb
@@ -299,6 +299,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['h', 'h', 'i', 'o', 'r', 't'],['e', 'h', 'l', 'l', 'o']\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = list(\"rohith\")\n",
+    "t = list(\"hello\")\n",
+    "s.sort(),t.sort()\n",
+    "print(f'{s},{t}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
