added new programs

--- a/hash_tabes.ipynb
+++ b/hash_tabes.ipynb
@@ -310,6 +310,123 @@
    "source": [
     "t.arr"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "5\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "##generators\n",
+    "def fib(n):\n",
+    "    p,q = 0,1\n",
+    "    while(p<n):\n",
+    "        yield p\n",
+    "        p,q = q,p+q\n",
+    "x = fib(10)\n",
+    "x.__next__()\n",
+    "x.__next__()\n",
+    "x.__next__()\n",
+    "x.__next__()\n",
+    "\n",
+    "for i in fib(10):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "started\n",
+      "helo\n",
+      "ended\n"
+     ]
+    }
+   ],
+   "source": [
+    "#wrapper methods and diffrent methods of calling a fucntion with *args and **kwargs and with decoraters\n",
+    "\n",
+    "def f1(func):\n",
+    "    def wrapper(*args,**kwargs):\n",
+    "        print(\"started\")\n",
+    "        func(*args,**kwargs)\n",
+    "        print(\"ended\")\n",
+    "    return wrapper\n",
+    "@f1\n",
+    "def f(a):\n",
+    "    print(a)\n",
+    "    #print(\"hello\")\n",
+    "x = f(\"helo\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[123, None, None, None, None, None, None, None, None, 140]"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class HashTables():\n",
+    "    def __init__(self):\n",
+    "        self.MAX = 10\n",
+    "        self.arr = [None for x in range(self.MAX) ]\n",
+    "    def get_hash(self,key):\n",
+    "        h = 0\n",
+    "        for char in key:\n",
+    "            h += ord(char)\n",
+    "        return h % self.MAX\n",
+    "    def __setitem__(self,key,value):\n",
+    "        h = self.get_hash(key)\n",
+    "        self.arr[h] = value\n",
+    "    def __getitem__(self,key):\n",
+    "        h = self.get_hash(key)\n",
+    "        return self.arr[h]\n",
+    "    def __delitem__(self,key):\n",
+    "        h = self.get_hash(key)\n",
+    "        del self.arr[h] \n",
+    "t = HashTables()\n",
+    "t.__setitem__(\"march 6\",140)\n",
+    "t.__setitem__(\"march 7\",123)\n",
+    "t.__getitem__(\"march 6\")\n",
+    "t.arr\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
