--- a/bascis.ipynb
+++ b/bascis.ipynb
@@ -361,16 +361,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +378,7 @@
    "source": [
     "#anagrm (array)\n",
     "s = \"anagram\"\n",
-    "t = \"nagram\"\n",
+    "t = \"nagrama\"\n",
     "def anagram(s : str , t: str) -> bool:\n",
     "    if len(s) != len(t):\n",
     "        return False\n",
@@ -445,6 +445,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#anagram\n",
+    "def anagram(s :str,t :str)-> bool:\n",
+    "    if len(s) != len(t):\n",
+    "        return False\n",
+    "    countS = {}\n",
+    "    countT = {}\n",
+    "    for i in range(len(s)):\n",
+    "        countS[s[i]] = countS.get(s[i],0)\n",
+    "        countT[s[i]] = countT.get(s[i],0)\n",
+    "    for c in countS:\n",
+    "        if countS[c] != countT.get(c,0):\n",
+    "            return False\n",
+    "    return True\n",
+    "anagram(\"anagram\",\"nangram\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -467,7 +500,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.17"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
