some minor changes

--- a/linked_list.ipynb
+++ b/linked_list.ipynb
@@ -255,17 +255,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2 >> 7"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class node():\n",
+    "    def __init__(self,data):\n",
+    "        self.data = data\n",
+    "        self.next = None\n",
+    "class LinkedList():\n",
+    "    def __init__(self):\n",
+    "        self.head = None\n",
+    "        self.tail = self.head\n",
+    "        self.length = 0\n",
+    "    def append(self,data):\n",
+    "        new_node = Node(data)\n",
+    "        if self.head == None:\n",
+    "            self.head = new_node\n",
+    "            self.tail = self.head\n",
+    "            self.length = 1\n",
+    "        else:\n",
+    "            self.tail.next = new_node\n",
+    "            self.tail = new_node\n",
+    "            self.length += 1\n",
+    "    def prepend(self,data):\n",
+    "        new_node = Node(data)\n",
+    "        if self.head == None:\n",
+    "            self.head = new_node\n",
+    "            self.tail = self.head\n",
+    "            self.length = 1 \n",
+    "        else:\n",
+    "            new_node.next = self.head\n",
+    "            self.head = new_node\n",
+    "            self.length += 1\n",
+    "            \n",
+    "    def printlist(self):\n",
+    "        if self.head == None:\n",
+    "            print(\"the linked list is empty\")\n",
+    "        else:\n",
+    "            current_node = self.head\n",
+    "            while current_node != None:\n",
+    "                print(current_node.data)\n",
+    "                current_node = current_node.next\n",
+    "        print()\n",
+    "    #check is the list is empty\n",
+    "    #check if the head the node to be deleted\n",
+    "    # check if the head is none or the head.next is none if yes make the tail equal to head\n",
+    "    #decrease the length\n",
+    "    #traverse till the n-1 pos of the desired node \n",
+    "    #bypass that node (deletion)\n",
+    "    #check if the current_node.next is none if yes make the tail equal to current_node\n",
+    "    #decrease the length\n",
+    "    def delete_by_value(self,data):\n",
+    "        current_node = self.head\n",
+    "        if self.head == None:\n",
+    "            raise ValueError(\"the linked list is empty\")\n",
+    "        if current_node.data  == data:\n",
+    "            self.head = self.head.next\n",
+    "            if self.head == None or  self.head.next == None:\n",
+    "                self.tail = self.head\n",
+    "            self.length -= 1\n",
+    "            return\n",
+    "        while current_node != None and current_node.next.data  != data:\n",
+    "            current_node = current_node.next\n",
+    "        if current_node.next != None:\n",
+    "            current_node.next  = current_node.next.next\n",
+    "            if current_node.next == None:\n",
+    "                self.tail = current_node\n",
+    "            \n",
+    "            self.length -= 1\n",
+    "            return\n",
+    "        else:\n",
+    "            raise ValueError(\"value not found in the linked list\")\n",
+    "    \n",
+    "            \n",
+    "    \n",
+    "    #insert at any postion includes append amd prepend\n",
+    "    #to insert in the nth pos of the list traverse till the n-1 pos where you need to append\n",
+    "    #make the new_mode.next = current_node.next\n",
+    "    #and the current_node's next equal to new_node next\n",
+    "    #increase the length \n",
+    "    def insert(self,position,data):\n",
+    "        if position >= self.length:\n",
+    "            if position > self.length:\n",
+    "                raise ValueError(\"position not available\")\n",
+    "            new_node = Node(data)\n",
+    "            self.tai.next = new_node\n",
+    "            self,tail = new_node\n",
+    "            self.length += 1\n",
+    "        elif position == 0:\n",
+    "            new_node = Node(data)\n",
+    "            new_node.next = self.head\n",
+    "            self.head = new_node\n",
+    "            self.length += 1\n",
+    "        else:\n",
+    "            new_node = Node(data)\n",
+    "            current_node = self.head\n",
+    "            for i in range(position - 1):\n",
+    "                current_node = current_node\n",
+    "            new_node.next = current_node.next\n",
+    "            current_node.next = new_node\n",
+    "            self.length += 1\n",
+    "        \n",
+    "                \n",
+    "            \n",
+    "        "
+   ]
   }
  ],
  "metadata": {
