--- a/bascis.ipynb
+++ b/bascis.ipynb
@@ -478,6 +478,135 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 4, 2, 3, 2, 332, 1]\n",
+      "[1, 3, 2, 3, 2, 4, 1, 332]\n",
+      "[1, 2, 3, 2, 3, 1, 4, 332]\n",
+      "[1, 2, 2, 3, 1, 3, 4, 332]\n",
+      "[1, 2, 2, 1, 3, 3, 4, 332]\n",
+      "[1, 2, 1, 2, 3, 3, 4, 332]\n",
+      "[1, 1, 2, 2, 3, 3, 4, 332]\n",
+      "the number of comparisons are 28\n",
+      " and the sorted array is [1, 1, 2, 2, 3, 3, 4, 332]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#bubble sort\n",
+    "def bubble_sort(nums):\n",
+    "    count = 0\n",
+    "    flag = False\n",
+    "    for i in range(len(nums)-1):\n",
+    "        print(nums)\n",
+    "        for j in range(len(nums)-i-1):\n",
+    "            count += 1\n",
+    "            if nums[j] > nums[j+1]:\n",
+    "                nums[j],nums[j+1] = nums[j+1],nums[j]\n",
+    "                flag = True\n",
+    "        if flag == False:\n",
+    "            break\n",
+    "        \n",
+    "    return f'the number of comparisons are {count}\\n and the sorted array is {nums}'\n",
+    "nums = [1,3,4,2,3,2,332,1]\n",
+    "print(bubble_sort(nums))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Given an integer array nums, find the contiguous subarray (containing at least one number) which has the largest sum\n",
+    "#and return its sum.\n",
+    "#Example:\n",
+    "#Input: [-2,1,-3,4,-1,2,1,-5,4],\n",
+    "#Output: 6\n",
+    "#Explanation: [4,-1,2,1] has the largest sum = 6.\n",
+    "def max_subarray(nums):\n",
+    "    maximum = 0\n",
+    "    for i in range(len(nums)):\n",
+    "        cum_sum = 0\n",
+    "        for j in range(i,len(nums)):\n",
+    "            cum_sum += nums[j]\n",
+    "            maximum = max(cum_sum,maximum)\n",
+    "    return maximum\n",
+    "nums = [-2,1,-3,4,-1,2,1,-5,4]\n",
+    "print(max_subarray(nums))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ERROR: Could not find file /var/folders/_t/qw5pnzq57hj6vr83mysgnb700000gn/T/ipykernel_35430/3090251240.py\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "#a more optimised approach\n",
+    "from memory_profiler import profile\n",
+    "@profile(stream = open('memory_profiler.log','w+'))\n",
+    "\n",
+    "def max_subarray(nums):\n",
+    "    max_sum = nums[0]\n",
+    "    cum_sum = nums[0]\n",
+    "    for i in range(1,len(nums)):\n",
+    "        cum_sum = max(nums[i],cum_sum+nums[i])\n",
+    "        max_sum = max(cum_sum,max_sum)\n",
+    "    return max_sum\n",
+    "nums = [-2,1,-3,4,-1,2,1,-5,4]\n",
+    "print(max_subarray(nums))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# * AND / PARAMETERS IN PYTHON\n",
+    "#/--> positional only\n",
+    "#*--> keyword only\n",
+    "def myfucntion(p1,p2,*,p3):\n",
+    "    print(p1,p2,p3)\n",
+    "# myfucntion(1,2,3)#positional arguments\n",
+    "# myfucntion(p3 = 3,p2 = 2,p1 = 1)#keyword arguments\n",
+    "# myfucntion(1,2,p3 = 3)#mixed arguments\n",
+    "#myfucntion(1, 2,p3 = 3)\n",
+    "myfucntion(1,2,p3 = 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
