--- a/bascis.ipynb
+++ b/bascis.ipynb
@@ -607,6 +607,78 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['t',\n",
+       " 'h',\n",
+       " 'e',\n",
+       " 'c',\n",
+       " 'a',\n",
+       " 't',\n",
+       " 's',\n",
+       " 'a',\n",
+       " 't',\n",
+       " 'o',\n",
+       " 'n',\n",
+       " 't',\n",
+       " 'h',\n",
+       " 'e',\n",
+       " '^',\n",
+       " '$',\n",
+       " 'h',\n",
+       " 'a',\n",
+       " 't',\n",
+       " 's']"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#REGULAR EXPRESSION\n",
+    "#. ^ $ * + ? { } [ ] \\ | ( )\n",
+    "#Metacharacters (except \\are not active inside classes. For example, [akm$] will match any of the characters 'a', 'k', 'm', or '$'; '$' is usually a metacharacter, but inside a character class it’s stripped of its special nature.\n",
+    "\n",
+    "\n",
+    "#\\d\n",
+    "# Matches any decimal digit; this is equivalent to the class [0-9].\n",
+    "# \\D\n",
+    "# Matches any non-digit character; this is equivalent to the class [^0-9].\n",
+    "# \\s\n",
+    "# Matches any whitespace character; this is equivalent to the class [ \\t\\n\\r\\f\\v].\n",
+    "# \\S\n",
+    "# Matches any non-whitespace character; this is equivalent to the class [^ \\t\\n\\r\\f\\v].\n",
+    "# \\w\n",
+    "# Matches any alphanumeric character; this is equivalent to the class [a-zA-Z0-9_].\n",
+    "# \\W\n",
+    "# Matches any non-alphanumeric character; this is equivalent to the class [^a-zA-Z0-9_].\n",
+    "#The final metacharacter in this section is .\n",
+    "#It matches anything except a newline character, and there’s an alternate mode (re.DOTALL) where it will match even a newline. . is often used where you want to match “any character”.\n",
+    "#Another repeating metacharacter is +, which matches one or more times. Pay careful attention to the difference between * and +; * matches zero or more times, so whatever’s being repeated may not be present at all, while + requires at least one occurrence. To use a similar example, ca+t will match 'cat' (1 'a'), 'caaat' (3 'a's), but won’t match 'ct'.\n",
+    "#The question mark character, ?, matches either once or zero times; you can think of it as marking something as being optional. For example, home-?brew matches either 'homebrew' or 'home-brew'.\n",
+    "#The most complicated quantifier is {m,n}, where m and n are decimal integers. This quantifier means there must be at least m repetitions, and at most n. For example, a/{1,3}b will match 'a/b', 'a//b', and 'a///b'. It won’t match 'ab', which has no slashes, or 'a////b', which has four.\n",
+    "\n",
+    "\n",
+    "import re\n",
+    "s = \"the cat sat on the ^ $ hats\"\n",
+    "re.findall(r'\\S',s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -629,7 +701,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
