--- a/targetsum.ipynb
+++ b/targetsum.ipynb
@@ -21,9 +21,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'List' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#target sum\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mtargetsum\u001b[39m(\u001b[38;5;28mself\u001b[39m , nums : \u001b[43mList\u001b[49m[nums] , target :\u001b[38;5;28mint\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mint\u001b[39m:\n\u001b[1;32m      3\u001b[0m     dp \u001b[38;5;241m=\u001b[39m {} \u001b[38;5;66;03m#this is the hashmap which will contain the value (i,total)\u001b[39;00m\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mbacktrack\u001b[39m(i,total):\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'List' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#target sum\n",
     "def targetsum(self , nums : List[nums] , target :int) -> int:\n",
@@ -269,7 +281,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.9.6"
   },
   "orig_nbformat": 4
  },
