Add string manipulation functions

--- a/bascis.ipynb
+++ b/bascis.ipynb
@@ -672,10 +672,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['-', '-', '-', '-', 'b', 'a', 'n', 'g', 'a', 'l', 'o', 'r', 'e', 'i', 's', 'a', 'n', 'i', 'c', 'e', 'p', 'l', 'a', 'c', 'e']\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "import re\n",
+    "s = 'bangalore-is-a-nice-place'\n",
+    "\n",
+    "def main():\n",
+    "    hyphen = re.findall(r'\\-',s)\n",
+    "    words = re.findall(r'\\w',s)\n",
+    "    l1 = []\n",
+    "    l2 = []\n",
+    "    for i in hyphen:\n",
+    "        l1.append(i)\n",
+    "    for j in words:\n",
+    "        l2.append(j) \n",
+    "    print(l1+l2)\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    main()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ge$ksfor$$$$$\n"
+     ]
+    }
+   ],
+   "source": [
+    "def remove_duplicates_and_replace(s):\n",
+    "    char_dict = {}\n",
+    "    result = \"\"\n",
+    "    for char in s:\n",
+    "        if char not in char_dict:\n",
+    "            char_dict[char] = 1\n",
+    "            result += char\n",
+    "        else:\n",
+    "            result += '$'\n",
+    "    return result\n",
+    "\n",
+    "# Example usage\n",
+    "input_string = \"geeksforgeeks\"\n",
+    "output_string = remove_duplicates_and_replace(input_string)\n",
+    "print(output_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "eht tac tas no eht\n"
+     ]
+    }
+   ],
+   "source": [
+    "def swap_first_last_char(text):\n",
+    "    words = text.split()\n",
+    "    modified_words = []\n",
+    "    for word in words:\n",
+    "        if len(word) < 2:\n",
+    "            modified_words.append(word)\n",
+    "        else:\n",
+    "            modified_words.append(word[::-1])\n",
+    "    return ' '.join(modified_words)\n",
+    "s = \"the cat sat on the\"\n",
+    "print(swap_first_last_char(s))\n"
+   ]
   },
   {
    "cell_type": "code",
