--- a/bascis.ipynb
+++ b/bascis.ipynb
@@ -581,28 +581,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 2 3\n"
+      "[1, 3, 12, 0, 0]\n",
+      "[1, 3, 12, 0, 0]\n"
      ]
     }
    ],
    "source": [
-    "# * AND / PARAMETERS IN PYTHON\n",
-    "#/--> positional only\n",
-    "#*--> keyword only\n",
-    "def myfucntion(p1,p2,*,p3):\n",
-    "    print(p1,p2,p3)\n",
-    "# myfucntion(1,2,3)#positional arguments\n",
-    "# myfucntion(p3 = 3,p2 = 2,p1 = 1)#keyword arguments\n",
-    "# myfucntion(1,2,p3 = 3)#mixed arguments\n",
-    "#myfucntion(1, 2,p3 = 3)\n",
-    "myfucntion(1,2,p3 = 3)"
+    "#Given an array nums, write a function to move all 0's to the end of it while maintaining the relative order of the non-zero elements.\n",
+    "#Example:\n",
+    "#Input: [0,1,0,3,12]\n",
+    "#Output: [1,3,12,0,0]\n",
+    "def move_zeroes(nums):\n",
+    "    for i in range(len(nums)):\n",
+    "        if nums[i] == 0:\n",
+    "            nums.append(nums.pop(i))\n",
+    "    return nums\n",
+    "nums = [0,1,0,3,12]\n",
+    "print(move_zeroes(nums))\n",
+    "\n",
+    "\n",
+    "#one liear move\n",
+    "\n",
+    "def one_linear_move(nums):\n",
+    "    nums.sort(key = bool,reverse = True)\n",
+    "    return nums\n",
+    "\n",
+    "nums = [0,1,0,3,12]\n",
+    "print(move_zeroes(nums))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "94\n"
+     ]
+    }
+   ],
+   "source": [
+    "# The oxygen value entered should not be accepted if it is not in the range between 1 and 100.\n",
+    "# If the calculated maximum average oxygen value of trainees is below 70 then declare the trainees as unfit with meaningful message as “All trainees are unfit.\n",
+    "# Average Oxygen Values should be rounded.\n",
+    "def oxygen_calculator(nums):\n",
+    "    if any(num < 1 or num > 100 for num in nums):\n",
+    "        return \"Invalid input\"\n",
+    "    average = sum(nums)//len(nums)\n",
+    "    if average < 70:\n",
+    "        return \"All trainees are unfit\"\n",
+    "    return round(average)\n",
+    "\n",
+    "nums = [90,91,92,93,94,95,96,97,98,99]\n",
+    "print(oxygen_calculator(nums))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "most fit trainee is -->[1], with the oxygen level of-->75\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fitness_test(oxygen_levels):\n",
+    "    averages = [round(sum(levels) / len(levels)) for levels in oxygen_levels]\n",
+    "    if max(averages) < 70:\n",
+    "        return \"All trainees are unfit\"\n",
+    "    max_avg = max(averages)\n",
+    "    most_fit_trainees = [i+1 for i, avg in enumerate(averages) if avg >= max_avg]\n",
+    "    return f'most fit trainee is -->{most_fit_trainees}, with the oxygen level of-->{max_avg}'\n",
+    "oxygen_levels = [[75,75,74],[75,75,73],[75,75,71]]\n",
+    "print(fitness_test(oxygen_levels))"
    ]
   },
   {
@@ -629,7 +696,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
