Add new code snippets for password validation, character replacement, and base conversion

--- a/bascis.ipynb
+++ b/bascis.ipynb
@@ -674,6 +674,110 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OR result: 1\n",
+      "AND result: 0\n",
+      "XOR result: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = 'a0b1c0d1'\n",
+    "or_result = 0\n",
+    "and_result = 1\n",
+    "xor_result = 0\n",
+    "\n",
+    "for i in s:\n",
+    "    if i.isnumeric():\n",
+    "        num = int(i)\n",
+    "        or_result |= num\n",
+    "        and_result &= num\n",
+    "        xor_result ^= num\n",
+    "\n",
+    "print(\"OR result:\", or_result)\n",
+    "print(\"AND result:\", and_result)\n",
+    "print(\"XOR result:\", xor_result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "valid\n"
+     ]
+    }
+   ],
+   "source": [
+    "def vaild_password(s):\n",
+    "    if len(s) > 4:\n",
+    "        if s[0] != int and any(words.isupper() for words in s) and any(words.islower() for words in s) and any(words.isdigit() for words in s) and (words not in['$','@',' '] for words in s):\n",
+    "            print(\"valid\")\n",
+    "        else:\n",
+    "            print(\"invalid\")\n",
+    "\n",
+    "s = \"Rohith134\"\n",
+    "vaild_password(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rnnitn\n"
+     ]
+    }
+   ],
+   "source": [
+    "import string\n",
+    "def char_replace(s):\n",
+    "    for i in s:\n",
+    "        if i.isalpha() and i.islower():\n",
+    "            if i == 'h':\n",
+    "                s = s.replace(i,'n') \n",
+    "            if i == 'o':\n",
+    "                s = s.replace(i,'h')\n",
+    "    return s \n",
+    "s = 'rohith'\n",
+    "print(char_replace(s))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('0xa', 10.0, (10+0j), 10)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def intTobaseN(num):\n",
+    "    return hex(num), float(num), complex(num),int(num)\n",
+    "print(intTobaseN(10))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
