--- a/hash_tabes.ipynb
+++ b/hash_tabes.ipynb
@@ -119,7 +119,7 @@
     "    for char in key:\n",
     "        h += ord(char)\n",
     "    return h % 100\n",
-    "get_hash(\"march 6\") "
+    "get_hash(\"march 6\")\n"
    ]
   },
   {
@@ -420,6 +420,13 @@
     "t.arr\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
