--- a/bascis.ipynb
+++ b/bascis.ipynb
@@ -778,6 +778,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "90\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sum_difference(n, m):\n",
+    "    # Initialize sums\n",
+    "    sum_divisible = 0\n",
+    "    sum_not_divisible = 0\n",
+    "\n",
+    "    # Iterate through the range from 1 to m\n",
+    "    for i in range(1, m + 1):\n",
+    "        # Check if the number is divisible by n\n",
+    "        if i % n == 0:\n",
+    "            # If divisible, add to the sum of divisible numbers\n",
+    "            sum_divisible += i\n",
+    "        else:\n",
+    "            # If not divisible, add to the sum of not divisible numbers\n",
+    "            sum_not_divisible += i\n",
+    "\n",
+    "    # Calculate the difference between the two sums\n",
+    "    difference = sum_not_divisible - sum_divisible\n",
+    "\n",
+    "    return difference\n",
+    "\n",
+    "# Example usage\n",
+    "n = 4\n",
+    "m = 20\n",
+    "print(sum_difference(n, m)) # Output should be 27"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
