--- a/bascis.ipynb
+++ b/bascis.ipynb
@@ -818,6 +818,139 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def IsoMorphic(s:str,t:str)-> bool:\n",
+    "    if len(s) != len(t):\n",
+    "        print(\"the lenght is not equal\")\n",
+    "\n",
+    "    s_to_t ={}\n",
+    "    t_to_s = {}\n",
+    "\n",
+    "    for char_s,char_t in zip(s,t):\n",
+    "        if char_s in s_to_t:\n",
+    "            if s_to_t[char_s] != char_t:\n",
+    "                return False\n",
+    "        elif char_t in t_to_s:\n",
+    "            if t_to_s[char_t] != char_s:\n",
+    "                return False\n",
+    "        else:\n",
+    "            s_to_t[char_s] = char_t\n",
+    "            t_to_s[char_t] = char_s\n",
+    "    return True\n",
+    "\n",
+    "\n",
+    "            \n",
+    "IsoMorphic(s = \"foo\", t = \"bar\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_isomorphic(s, t):\n",
+    "    if len(s) != len(t):\n",
+    "        return False\n",
+    "    \n",
+    "    s_to_t = {} # Maps characters from s to characters in t\n",
+    "    t_to_s = {} # Maps characters from t to characters in s\n",
+    "    \n",
+    "    for char_s, char_t in zip(s, t):\n",
+    "        if char_s in s_to_t:\n",
+    "            if s_to_t[char_s] != char_t:\n",
+    "                return False\n",
+    "        elif char_t in t_to_s:\n",
+    "            if t_to_s[char_t] != char_s:\n",
+    "                return False\n",
+    "        else:\n",
+    "            s_to_t[char_s] = char_t\n",
+    "            t_to_s[char_t] = char_s\n",
+    "    \n",
+    "    return True\n",
+    "\n",
+    "# Example usage\n",
+    "s = \"egg\"\n",
+    "t = \"add\"\n",
+    "print(is_isomorphic(s, t)) # Output: True\n",
+    "\n",
+    "s = \"foo\"\n",
+    "t = \"bar\"\n",
+    "print(is_isomorphic(s, t)) # Output: False\n",
+    "\n",
+    "s = \"paper\"\n",
+    "t = \"title\"\n",
+    "print(is_isomorphic(s, t)) # Output: True\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
