--- a/HashTables/hash_tabes.ipynb
+++ b/HashTables/hash_tabes.ipynb
@@ -423,6 +423,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "good request\n"
+     ]
+    }
+   ],
+   "source": [
+    "#match case in python\n",
+    "def httpstatus(status):\n",
+    "    match status:\n",
+    "        case 400:\n",
+    "            return \"bad request\"\n",
+    "        case 200:\n",
+    "            return \"good request\"\n",
+    "        case 403:\n",
+    "            return \"not found\"\n",
+    "        case 401:\n",
+    "            return \"you are a goat\"\n",
+    "print(httpstatus(200))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -452,7 +494,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
